@@ -1,23 +1,30 @@
 package io.example.hotel;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.StreamSupport;
+import java.util.stream.Collectors;
+import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 
 @RestController
-@RequestMapping("/v1/rooms")
+@RequestMapping(path = "/v1/rooms")
 @RequiredArgsConstructor
 public class RoomController {
 
     private final Rooms rooms;
 
-    @GetMapping
+    @GetMapping(produces = APPLICATION_JSON_VALUE)
     @CrossOrigin(origins = "http://localhost:5500")
-    public List<RoomDTO> listRooms() {
-        return StreamSupport.stream(rooms.findAll().spliterator(), false)
+    public ResponseEntity<List<RoomDTO>> getRoomsByHotelId(@RequestParam Integer hotelId) {
+        var roomList = rooms.findAll().stream()
+                .filter(room -> room.getHotel() != null
+                        && room.getHotel().getId() != null
+                        && hotelId.equals(room.getHotel().getId().id()))
                 .map(RoomDTO::from)
-                .toList();
+                .collect(Collectors.toList());
+
+        return ResponseEntity.ok(roomList);
     }
 }
